--- a/Enemy_Frontlines.uproject
+++ b/Enemy_Frontlines.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{0615B17B-4702-DF5C-4956-10ADE915B060}",
+	"EngineAssociation": "4.27",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
